--- a/values.yaml
+++ b/values.yaml
@@ -1,5 +1,5 @@
 netbox:
-  image: netboxcommunity/netbox:v3.0.10
+  image: netboxcommunity/netbox:v3.2.2
   superuserName: admin
   # please edit password
   superuserPassword: admin
@@ -7,6 +7,8 @@ netbox:
   # please edit secret key
   secretKey: qwertyuiopasdfghjklzxcvbnm
   basePath: 'netbox/'
+  # change this to your host
+  csrfOrigin: 'http://www.example.com'
 
 nginx:
   image: nginx:1.19.8-alpine
